--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -1,13 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "5e6db586",
+   "metadata": {},
+   "source": [
+    "# Farkasok és bárányok populációmodell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d2fac66",
+   "metadata": {},
    "source": []
   }
  ],
@@ -20,14 +24,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
