Hunting and Flocking added

--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -5,6 +5,7 @@
    "id": "5e6db586",
    "metadata": {},
    "source": [
+    "# Herman Dávid Tamás\n",
     "# Farkasok és bárányok populációmodell"
    ]
   },
@@ -47,11 +48,17 @@
    "id": "85bd736c",
    "metadata": {},
    "source": [
-    "Mindhárom modellben van két állatfaj, egy ragadozó és egy növényevő, amelyeket mint farkasok és bárányok reprezentálnak.\n",
+    "Mindhárom modellben van két állatfaj, egy ragadozó és egy növényevő, amelyeket mint farkasok és bárányok reprezentálunk.\n",
     "Ezek az állatok egy füves területen élnek és a bárányok legelik a füvet, a farkasok megeszik a bárányokat.\n",
     "Továbbá minden egyednek van valamennyi energiája, amely minden lépésben (a modell állapotváltozása) eggyel csökken, de evés által a megadott paraméternyivel megnő. Ha elfogy az energiájuk (nem 0, hanem kevesebb, mint 0 energia), akkor meghalnak. Ezek mellett képesek is szaporodni valószínűségi alapon, azonban ekkor az energiájuk megfeleződik.\n",
     "\n",
-    "Az eredeti modellben a fű mint \"patchek\" voltak a cellákba helyezve, míg ebben az implementációban ágensként. Mindhárom modell esetén annyi fű ágens van ahány cella. A fűnek két állapota van, a kinőtt és a lelegelt."
+    "Az eredeti modellben a fű mint \"patchek\" voltak a cellákba helyezve, míg ebben az implementációban ágensként. Mindhárom modell esetén annyi fű ágens van ahány cella. A fűnek két állapota van, a kinőtt és a lelegelt.\n",
+    "\n",
+    "Új paraméterek, amely mindhárom modellnél működik:\n",
+    "\n",
+    "* A farkasok aktívan vadásszanak-e.\n",
+    "\n",
+    "* A bárányok csordába igyekezzenek-e szerveződni."
    ]
   },
   {
@@ -75,7 +82,7 @@
     "\n",
     "* A farkasok megadott valószínűséggel esznek meg egy bárányt abból a cellából amelyen ők is vannak.\n",
     "\n",
-    "* Az egyedek megadott valószínűség hoznak világra utódot, amely az egyik szomszédos cellába kerül."
+    "* Az egyedek megadott valószínűség hoznak világra utódot, amely utód az egyik szomszédos cellába kerül."
    ]
   },
   {
@@ -119,10 +126,22 @@
     "\n",
     "* A szaporodáshoz a valószínűség mellett két különböző nemű egyed kell legyen egy közös cellában és mindkét szűlőnek \"akarnia\" kell.\n",
     "\n",
-    "* A farkasok aktívan vadásznak (álltható).\n",
-    "\n",
-    "* A bárányok csordába igyekeznek szerveződni (állítható)."
+    "* Az új szaporodási feltételek miatt egy szülő szaporodási valószínűsége a paraméter gyöke, így a két szülő együtt adja ki a paramétert."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "285f4d38",
+   "metadata": {},
+   "source": [
+    "## Megfigyelések"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5a2eba0",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
