--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "Az eredeti modellben a fű mint \"patchek\" voltak a cellákba helyezve, míg ebben az implementációban ágensként. Mindhárom modell esetén annyi fű ágens van ahány cella. A fűnek két állapota van, a kinőtt és a lelegelt.\n",
     "\n",
-    "Új paraméterek, amely mindhárom modellnél működik:\n",
+    "Új paraméterek, amely mindhárom modellnél működnek:\n",
     "\n",
     "* A farkasok aktívan vadásszanak-e.\n",
     "\n",
@@ -141,7 +141,9 @@
    "cell_type": "markdown",
    "id": "f5a2eba0",
    "metadata": {},
-   "source": []
+   "source": [
+    "A modell elemzés szempontjából legérdekesebb tulajdonsága a stabilitása."
+   ]
   },
   {
    "cell_type": "markdown",
