--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "Mindhárom modellben van két állatfaj, egy ragadozó és egy növényevő, amelyeket mint farkasok és bárányok reprezentálunk.\n",
     "Ezek az állatok egy füves területen élnek és a bárányok legelik a füvet, a farkasok megeszik a bárányokat.\n",
-    "Továbbá minden egyednek van valamennyi energiája, amely minden lépésben (a modell állapotváltozása) eggyel csökken, de evés által a megadott paraméternyivel megnő. Ha elfogy az energiájuk (nem 0, hanem kevesebb, mint 0 energia), akkor meghalnak. Ezek mellett képesek is szaporodni valószínűségi alapon, azonban ekkor az energiájuk megfeleződik.\n",
+    "Továbbá minden egyednek van valamennyi energiája (továbbiakban energiapont), amely minden lépésben (a modell állapotváltozása) eggyel csökken, de evés által a megadott paraméternyivel megnő. Ha elfogy az energiájuk (nem 0, hanem kevesebb, mint 0 energiapont), akkor meghalnak. Ezek mellett képesek is szaporodni valószínűségi alapon, azonban ekkor az energiájuk megfeleződik.\n",
     "\n",
     "Az eredeti modellben a fű mint \"patchek\" voltak a cellákba helyezve, míg ebben az implementációban ágensként. Mindhárom modell esetén annyi fű ágens van ahány cella. A fűnek két állapota van, a kinőtt és a lelegelt.\n",
     "\n",
@@ -58,7 +58,7 @@
     "\n",
     "* A farkasok aktívan vadásszanak-e.\n",
     "\n",
-    "* A bárányok csordába igyekezzenek-e szerveződni."
+    "* A bárányok nyájba igyekezzenek-e szerveződni."
    ]
   },
   {
@@ -142,9 +142,35 @@
    "id": "f5a2eba0",
    "metadata": {},
    "source": [
-    "A modell elemzés szempontjából legérdekesebb tulajdonsága a stabilitása, vagyis milyen paraméterek mellett nem halnak ki az állatok.\n",
+    "A megfigyelések leírása előtt rögzíteném a kiindulási paramétereket, amelyeket nagyrészt az eredeti modellből választottam.\n",
+    "Az életteret reprezentáló rács szélei össze vannak kötve egymással azaz, ha egy állat például egy felső szélen lévő cellából felfelé lép, akkor az alsó szélen lyukad ki.\n",
+    "A farkasok kezdeti száma 50, a bárányoké 100. A farkasok egy bárány megevésével 50 energiapontot szereznek, míg a bárányok egy cellányi fűből 4 energiapontot nyernek.\n",
+    "A farkasok 5, a bárányok 4% valószínűséggel szaporodnak. A lelegelt fű 30 lépésenként nő vissza. A farkasok aktívan vadásznak, a bárányok nyájba igyekeznek szerveződni.\n",
+    "A seed 474.\n",
     "\n",
-    "A három modelltípus különböző paraméterek mellett stabilak."
+    "A modell elemzés szempontjából legérdekesebb tulajdonsága a stabilitása, vagyis milyen paraméterek mellett nem halnak ki az állatok, illetve nem szaporodnak túl.\n",
+    "\n",
+    "Először egy az eredeti modell esetében is stabil beállításról beszélnék, arról, amikor a farkasok, bárányok és fű modellben a farkasok kezdeti számát nullára állítjuk. Ha modellem minden paraméterét alapértelmezetten hagyunk kivéve a modelltípust és a farkasok kezdeti számát, akkor is stabil modellt kapunk, de a bárányok sok kis létszámú nyájba szerveződnek. Ennek az az eddig nem említett oka, hogy, ha egy báránynak 0 energiapontja van, akkor nem korlátozom a mozgásukat (bármely szomszédos cellába léphetnek, ez az alapértelmezett viselkedés is) a túlélés valószínűségének növelése érdekében."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7513c41e",
+   "metadata": {},
+   "source": [
+    "## A vizualizációs program"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab4d68cd",
+   "metadata": {},
+   "source": [
+    "A modell vizualizációjáért a mesa_viz_tornado python csomag felelős (a Python tehát előfeltétele a futtatásnak), ami a mesa 2.4.0 verziójának egy szükséges csomagja, azonban az ennél újabb verziók (3.0.0+) megszabadultak tőle, ezért a kompatibilitás érdekében közvetlenül importáltam a belőle szükséges elemeket. Magának a modell kódjában van mesa verzió ellenőrzés is az ágensek bemeneti paraméter változása miatt, de ez a vizualizációt nem érinti.\n",
+    "\n",
+    "A vizualizációs programot többféleképpen is el lehet indítani. Egyik lehetőség az ezen notebookkal egy mappában lévő run.py fálj futtatása, vagy a mappában megnyitott parancsorba azt írjuk be, hogy \"mesa runserver\" idézjelek nélkül.\n",
+    "\n",
+    "Sajnálatos módon, Linux rendszerek alatt ajánlott a futtatás, mert valamilyen ok folytán Windows alatt a mesa_viz_tornado által generált weboldalon nem jelennek meg rendesen az interaktív elemek. Azonban WSL-lel vagy virtuális géppel Windowson is hibátlanul futattható, de a Microsoft Edge böngésző így sem tudja megjeleníteni a kérdéses elemeket, de a Firefox és a Google Chrome igen. Mindkét módszert Debian Linuxszal teszteltem."
    ]
   },
   {
