--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -163,15 +163,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c9059720",
+   "metadata": {},
+   "source": [
+    "### Futattás"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab4d68cd",
    "metadata": {},
    "source": [
-    "A modell vizualizációjáért a mesa_viz_tornado python csomag felelős (a Python tehát előfeltétele a futtatásnak), ami a mesa 2.4.0 verziójának egy szükséges csomagja, azonban az ennél újabb verziók (3.0.0+) megszabadultak tőle, ezért a kompatibilitás érdekében közvetlenül importáltam a belőle szükséges elemeket. Magának a modell kódjában van mesa verzió ellenőrzés is az ágensek bemeneti paraméter változása miatt, de ez a vizualizációt nem érinti.\n",
+    "A modell vizualizációjáért a mesa_viz_tornado python csomag felelős (a Python tehát előfeltétele a futtatásnak), ami a mesa 2.4.0 verziójának egy szükséges csomagja, azonban az ennél újabb verziók (3.0.0+) már nem használják, ezért a kompatibilitás érdekében közvetlenül importáltam a belőle szükséges elemeket.\n",
     "\n",
     "A vizualizációs programot többféleképpen is el lehet indítani. Egyik lehetőség az ezen notebookkal egy mappában lévő run.py fálj futtatása, vagy a mappában megnyitott parancsorba azt írjuk be, hogy \"mesa runserver\" idézjelek nélkül.\n",
     "\n",
-    "Sajnálatos módon, Linux rendszerek alatt ajánlott a futtatás, mert valamilyen ok folytán Windows alatt a mesa_viz_tornado által generált weboldalon nem jelennek meg rendesen az interaktív elemek. Azonban WSL-lel vagy virtuális géppel Windowson is hibátlanul futattható, de a Microsoft Edge böngésző így sem tudja megjeleníteni a kérdéses elemeket, de a Firefox és a Google Chrome igen. Mindkét módszert Debian Linuxszal teszteltem."
+    "Sajnálatos módon, Linux rendszer alatt ajánlott a futtatás, mert valamilyen ok folytán Windows alatt a mesa_viz_tornado által generált weboldalon nem jelennek meg rendesen az interaktív elemek. Azonban WSL-lel vagy virtuális géppel Windowson is hibátlanul futattható, de a Microsoft Edge böngésző így sem tudja megjeleníteni az érintett elemeket, de a Firefox és a Google Chrome igen. Mindkét módszert Debian Linuxszal teszteltem."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1f82297",
+   "metadata": {},
+   "source": [
+    "### Kezelés"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea331839",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
