Documentation progress, code optimizations

--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "A \"Farkasok és bárányok\" egy NetLogoban készült ágens alapú modell saját programozású mesa implementációja, illetve továbbfejlesztése.\n",
-    "Ez a modell egy farkas-, és egy bárány populáció együttélését modellezi háromféleképpen.\n",
+    "Ez a modell egy ragadozófaj és annak egy prédájának populációinak együttélését modellezi háromféleképpen.\n",
     "Az alapértelmezett modelltípus a saját bővítéseimet tartalmazza, míg a másik kettő az eredeti modell két típusát hivatott a lehető leghűbben implementálni."
    ]
   },
@@ -48,7 +48,7 @@
    "id": "85bd736c",
    "metadata": {},
    "source": [
-    "Mindhárom modellben van két állatfaj, egy ragadozó és egy növényevő, amelyeket mint farkasok és bárányok reprezentálunk.\n",
+    "Mindhárom modellben van két állatfaj, egy ragadozó és annak egy prédája, amelyeket mint farkasok és bárányok reprezentálunk.\n",
     "Ezek az állatok egy füves területen élnek és a bárányok legelik a füvet, a farkasok megeszik a bárányokat.\n",
     "Továbbá minden egyednek van valamennyi energiája (továbbiakban energiapont), amely minden lépésben (a modell állapotváltozása) eggyel csökken, de evés által a megadott paraméternyivel megnő. Ha elfogy az energiájuk (nem 0, hanem kevesebb, mint 0 energiapont), akkor meghalnak. Ezek mellett képesek is szaporodni valószínűségi alapon, azonban ekkor az energiájuk megfeleződik.\n",
     "\n",
@@ -178,7 +178,7 @@
     "\n",
     "A vizualizációs programot többféleképpen is el lehet indítani. Egyik lehetőség az ezen notebookkal egy mappában lévő run.py fálj futtatása, vagy a mappában megnyitott parancsorba azt írjuk be, hogy \"mesa runserver\" idézjelek nélkül.\n",
     "\n",
-    "Sajnálatos módon, Linux rendszer alatt ajánlott a futtatás, mert valamilyen ok folytán Windows alatt a mesa_viz_tornado által generált weboldalon nem jelennek meg rendesen az interaktív elemek. Azonban WSL-lel vagy virtuális géppel Windowson is hibátlanul futattható, de a Microsoft Edge böngésző így sem tudja megjeleníteni az érintett elemeket, de a Firefox és a Google Chrome igen. Mindkét módszert Debian Linuxszal teszteltem."
+    "Sajnálatos módon, Linux rendszer alatt ajánlott a futtatás, mert valamilyen ok folytán Windows alatt a mesa_viz_tornado által generált weboldalon nem jelennek meg rendesen az interaktív elemek. Azonban WSL-lel vagy virtuális géppel Windowson is hibátlanul futattható, de a Microsoft Edge böngésző így sem tudja megjeleníteni az érintett elemeket, de a Firefox és a Google Chrome igen. Mindkét módszert Debian Linuxszal teszteltem. Én a WSL megoldást javaslom, mert a kiírt IP-címes URL működik (http://127.0.0.1:8521) a virtuális gép esetével ellentétben."
    ]
   },
   {
