Final icons, hunting exponent, 20 EP gain for sheep, documentation adjustments

--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -58,7 +58,11 @@
     "\n",
     "* A farkasok aktívan vadásszanak-e.\n",
     "\n",
-    "* A bárányok nyájba igyekezzenek-e szerveződni."
+    "* A vadászatot korlátozó kitevő.\n",
+    "\n",
+    "* A bárányok nyájba igyekezzenek-e szerveződni.\n",
+    "\n",
+    "A vadászatot korlátozó kitevő azt jelenti, hogy annak a valószínűsége, hogy egy farkas aktívan vadászik $\\text{energiapont}^{-|\\text{kitevő}|}$. Tehát, ha a kitevő 0, akkor nincs korlátozás. Fontos megjegyezni, hogy a kitevő azért nempozitív, mert különben több energiapont nagyobb valószínűséget jelentene, ami értelmetlen, mivel a kitevőt amiatt vezettem be, mert a korlátlan vadászat túlvadászatot eredményezett."
    ]
   },
   {
@@ -142,11 +146,11 @@
    "id": "f5a2eba0",
    "metadata": {},
    "source": [
-    "A megfigyelések leírása előtt rögzíteném a kiindulási paramétereket, amelyeket nagyrészt az eredeti modellből választottam.\n",
+    "A megfigyelések leírása előtt rögzíteném a kiindulási paramétereket, amelyeket nagyrészt az eredeti modellből választottam, de a bárányok energiapont szerzését, növeltem a stabbilitás érdekében.\n",
     "Az életteret reprezentáló rács szélei össze vannak kötve egymással azaz, ha egy állat például egy felső szélen lévő cellából felfelé lép, akkor az alsó szélen lyukad ki.\n",
-    "A farkasok kezdeti száma 50, a bárányoké 100. A farkasok egy bárány megevésével 50 energiapontot szereznek, míg a bárányok egy cellányi fűből 4 energiapontot nyernek.\n",
+    "A farkasok kezdeti száma 50, a bárányoké 100. A farkasok egy bárány megevésével 50 energiapontot szereznek, míg a bárányok egy cellányi fűből 20 energiapontot nyernek (eredetileg 4-et).\n",
     "A farkasok 5, a bárányok 4% valószínűséggel szaporodnak. A lelegelt fű 30 lépésenként nő vissza. A farkasok aktívan vadásznak, a bárányok nyájba igyekeznek szerveződni.\n",
-    "A seed 474.\n",
+    "A vadászatot korlátozó kitevő $-0,5$, a seed 474.\n",
     "\n",
     "A modell elemzés szempontjából legérdekesebb tulajdonsága a stabilitása, vagyis milyen paraméterek mellett nem halnak ki az állatok, illetve nem szaporodnak túl.\n",
     "\n",
