--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -58,11 +58,13 @@
     "\n",
     "* A farkasok aktívan vadásszanak-e.\n",
     "\n",
-    "* A vadászatot korlátozó kitevő.\n",
+    "* A vadászatot korlátozó kitevő. Lásd lejjebb.\n",
     "\n",
     "* A bárányok nyájba igyekezzenek-e szerveződni.\n",
     "\n",
-    "A vadászatot korlátozó kitevő azt jelenti, hogy annak a valószínűsége, hogy egy farkas aktívan vadászik $\\text{energiapont}^{-|\\text{kitevő}|}$. Tehát, ha a kitevő 0, akkor nincs korlátozás. Fontos megjegyezni, hogy a kitevő azért nempozitív, mert különben több energiapont nagyobb valószínűséget jelentene, ami értelmetlen, mivel a kitevőt amiatt vezettem be, mert a korlátlan vadászat túlvadászatot eredményezett."
+    "* A random függvényeket szabályzó seed. A seed segítségével reprodukálhatóvá válnak a futtattások, de használata opcionális.\n",
+    "\n",
+    "A vadászatot korlátozó kitevő azt jelenti, hogy annak a valószínűsége, hogy egy farkas aktívan vadászik $\\text{energiapont}^{-|\\text{kitevő}|}$. Tehát, ha a kitevő 0, akkor nincs korlátozás. Fontos megjegyezni, hogy a kitevő azért nempozitív, mert különben több energiapont nagyobb valószínűséget jelentene, ami értelmetlen, mivel a kitevőt amiatt vezettem be, mert a korlátlan vadászat túlvadászatot eredményez."
    ]
   },
   {
@@ -86,7 +88,7 @@
     "\n",
     "* A farkasok megadott valószínűséggel esznek meg egy bárányt abból a cellából amelyen ők is vannak.\n",
     "\n",
-    "* Az egyedek megadott valószínűség hoznak világra utódot, amely utód az egyik szomszédos cellába kerül."
+    "* Az egyedek megadott valószínűséggel hoznak világra utódot, amely utód az egyik szomszédos cellába kerül."
    ]
   },
   {
@@ -106,7 +108,7 @@
     "\n",
     "* A fentiek érvényesek az alábbiak mellett.\n",
     "\n",
-    "* A bárányok energiája csökken minden lépéskor és megnő minden evéskor.\n",
+    "* A bárányok energiája ugyanúgy változik, mint a farkasoké.\n",
     "\n",
     "* A lelegelt fű ágensek megadott lépésenként nőnek ki újra."
    ]
@@ -148,7 +150,7 @@
    "source": [
     "A megfigyelések leírása előtt rögzíteném a kiindulási paramétereket, amelyeket nagyrészt az eredeti modellből választottam, de a bárányok energiapont szerzését, növeltem a stabbilitás érdekében.\n",
     "Az életteret reprezentáló rács szélei össze vannak kötve egymással azaz, ha egy állat például egy felső szélen lévő cellából felfelé lép, akkor az alsó szélen lyukad ki.\n",
-    "A farkasok kezdeti száma 50, a bárányoké 100. A farkasok egy bárány megevésével 50 energiapontot szereznek, míg a bárányok egy cellányi fűből 20 energiapontot nyernek (eredetileg 4-et).\n",
+    "A farkasok kezdeti száma 50, a bárányoké 100. A farkasok egy bárány megevésével szintén 20 energiapontot szereznek, míg a bárányok egy cellányi fűből 20 energiapontot nyernek (eredetileg 4-et).\n",
     "A farkasok 5, a bárányok 4% valószínűséggel szaporodnak. A lelegelt fű 30 lépésenként nő vissza. A farkasok aktívan vadásznak, a bárányok nyájba igyekeznek szerveződni.\n",
     "A vadászatot korlátozó kitevő $-0,5$, a seed 474.\n",
     "\n",
