Fix typo in documentation, added placeholder description for visualization

--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -202,7 +202,7 @@
    "source": [
     "<img src=\"wolfsheep/pics/viz_showcase.png\" width=700>\n",
     "\n",
-    "A fenti ábrán egy az alapértelmezett paraméterekkel készült képernyőkép látható még a modell futattása előttről."
+    "A fenti ábrán egy az alapértelmezett paraméterekkel, kezdeti állapotban készült képernyőkép látható."
    ]
   },
   {
