--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -200,9 +200,19 @@
    "id": "ea331839",
    "metadata": {},
    "source": [
-    "<img src=\"wolfsheep/pics/viz_showcase.png\" width=700>\n",
+    "<img src=\"wolfsheep/pics/viz_showcase.png\" width=700>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a8eee54",
+   "metadata": {},
+   "source": [
+    "A fenti ábrán egy az alapértelmezett paraméterekkel, kezdeti állapotban készült képernyőkép látható.\n",
     "\n",
-    "A fenti ábrán egy az alapértelmezett paraméterekkel, kezdeti állapotban készült képernyőkép látható."
+    "A felső sávban látható a modell neve, mellette az $,,\\text{About}\"$ gomb, amelyre rákattintva egy angol nyelvű leírás ugrik fel. A sáv jobb szélén a $,,\\text{Start}\"$, $,,\\text{Step}\"$ és $,,\\text{Stop}\"$ gombok vannak, amelyek közül a középső a modellt lépteti.\n",
+    "\n",
+    "A bal oldalon a modell paraméterei állíthatók be, középen a modellt vizualizáló négyzetrács látható, amely felett a rendes, Start gombbal való indított szimuláció sebessége allítható, amely alapértelmezett értéke 3 lépés/másodperc, azonban ez az ágensek számától függően változhat (például túlszaporodás esetén lassabb). A rács alatt két grafikon látható (az alsó nem fért a képre), amely közül az első az egyedek számát ábrázolja fajonként, illetve nemenként a lépésszám függvényében. Az alsó grafikon a kinőtt fűágensek százalékos arányát ábrázolja szintén a lépésszám függvényében. A lejjebb lévő $,,$ Vizualizáció nélküli futtattás $\"$ szakaszban ugyanezen grafikonok láthatóak."
    ]
   },
   {
