Documentation lists converted to HTML

--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -56,13 +56,12 @@
     "\n",
     "Új paraméterek, amely mindhárom modellnél működnek:\n",
     "\n",
-    "* A farkasok aktívan vadásszanak-e.\n",
-    "\n",
-    "* A vadászatot korlátozó kitevő. Lásd lejjebb.\n",
-    "\n",
-    "* A bárányok nyájba igyekezzenek-e szerveződni.\n",
-    "\n",
-    "* A random függvényeket szabályzó seed. A seed segítségével reprodukálhatóvá válnak a futtattások, de kikapcsolható.\n",
+    "<ul>\n",
+    "<li>A farkasok aktívan vadásszanak-e.</li>\n",
+    "<li>A vadászatot korlátozó kitevő. Lásd lejjebb.</li>\n",
+    "<li>A bárányok nyájba igyekezzenek-e szerveződni.</li>\n",
+    "<li>A random függvényeket szabályzó seed. A seed segítségével reprodukálhatóvá válnak a futtattások, de kikapcsolható.</li>\n",
+    "</ul>\n",
     "\n",
     "A vadászatot korlátozó kitevő azt jelenti, hogy annak a valószínűsége, hogy egy farkas aktívan vadászik $\\text{energiapont}^{-|\\text{kitevő}|}$. Tehát, ha a kitevő 0, akkor nincs korlátozás. Fontos megjegyezni, hogy a kitevő azért nempozitív, mert különben a kódban működéséből kifolyólag a valószínűség 100% lenne, mint a 0 esetében. Szabad vadászat esetén a túlvadászat a jellemző, ez volt a kitevő bevezetésének motivációja."
    ]
@@ -80,15 +79,13 @@
    "id": "b6cd8f86",
    "metadata": {},
    "source": [
-    "* A legegyszerűbb modelltípus, amely az eredeti modellből lett közvetlenül implementálva.\n",
-    "\n",
-    "* Minden fű mindig ki van nőve.\n",
-    "\n",
-    "* A bárányoknak végtelen energiájuk van (nem változik).\n",
-    "\n",
-    "* A farkasok megadott valószínűséggel esznek meg egy bárányt abból a cellából amelyen ők is vannak.\n",
-    "\n",
-    "* Az egyedek megadott valószínűséggel hoznak világra utódot, amely utód az egyik szomszédos cellába kerül."
+    "<ul>\n",
+    "<li>A legegyszerűbb modelltípus, amely az eredeti modellből lett közvetlenül implementálva.</li>\n",
+    "<li>Minden fű mindig ki van nőve.</li>\n",
+    "<li>A bárányoknak végtelen energiájuk van (nem változik).</li>\n",
+    "<li>A farkasok megadott valószínűséggel esznek meg egy bárányt abból a cellából amelyen ők is vannak.</li>\n",
+    "<li>Az egyedek megadott valószínűséggel hoznak világra utódot, amely utód az egyik szomszédos cellába kerül.</li>\n",
+    "</ul>"
    ]
   },
   {
@@ -104,13 +101,12 @@
    "id": "329d838e",
    "metadata": {},
    "source": [
-    "* Szintén az eredeti modellből implementálva.\n",
-    "\n",
-    "* A fentiek érvényesek az alábbiak mellett.\n",
-    "\n",
-    "* A bárányok energiája ugyanúgy változik, mint a farkasoké.\n",
-    "\n",
-    "* A lelegelt fű ágensek megadott lépésenként nőnek ki újra."
+    "<ul>\n",
+    "<li>Szintén az eredeti modellből implementálva.</li>\n",
+    "<li>A fentiek érvényesek az alábbiak mellett.</li>\n",
+    "<li>A bárányok energiája ugyanúgy változik, mint a farkasoké.</li>\n",
+    "<li>A lelegelt fű ágensek megadott lépésenként nőnek ki újra.</li>\n",
+    "</ul>"
    ]
   },
   {
@@ -126,13 +122,12 @@
    "id": "dea809f4",
    "metadata": {},
    "source": [
-    "* Az általam bővített modelltípus.\n",
-    "\n",
-    "* Az állat ágenseknek van neme.\n",
-    "\n",
-    "* A szaporodáshoz a valószínűség mellett két különböző nemű egyed kell legyen egy közös cellában és mindkét szűlőnek \"akarnia\" kell.\n",
-    "\n",
-    "* Az új szaporodási feltételek miatt egy szülő szaporodási valószínűsége a paraméter gyöke, így a két szülő együtt adja ki a paramétert."
+    "<ul>\n",
+    "<li>Az általam bővített modelltípus.</li>\n",
+    "<li>Az állat ágenseknek van neme.</li>\n",
+    "<li>A szaporodáshoz a valószínűség mellett két különböző nemű egyed kell legyen egy közös cellában és mindkét szűlőnek \"akarnia\" kell.</li>\n",
+    "<li>Az új szaporodási feltételek miatt egy szülő szaporodási valószínűsége a paraméter gyöke, így a két szülő együtt adja ki a paramétert.</li>\n",
+    "</ul>"
    ]
   },
   {
