Documentation fixes, README.md English part progress

--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -48,7 +48,7 @@
    "id": "85bd736c",
    "metadata": {},
    "source": [
-    "Mindhárom modellben van két állatfaj, egy ragadozó és annak egy prédája, amelyeket mint farkasok és bárányok reprezentálunk.\n",
+    "Mindhárom modellben van két állatfaj, egy ragadozó és annak egy prédája, amelyeket farkasokkal és bárányokkal reprezentálunk.\n",
     "Ezek az állatok egy füves területen élnek és a bárányok legelik a füvet, a farkasok megeszik a bárányokat.\n",
     "Továbbá minden egyednek van valamennyi energiája (továbbiakban energiapont), amely minden lépésben (a modell állapotváltozása) eggyel csökken, de evés által a megadott paraméternyivel megnő. Ha elfogy az energiájuk (nem 0, hanem kevesebb, mint 0 energiapont), akkor meghalnak. Ezek mellett képesek is szaporodni valószínűségi alapon, azonban ekkor az energiájuk megfeleződik.\n",
     "\n",
@@ -63,7 +63,7 @@
     "<li>A random függvényeket szabályzó seed. A seed segítségével reprodukálhatóvá válnak a futtattások, de kikapcsolható.</li>\n",
     "</ul>\n",
     "\n",
-    "A vadászatot korlátozó kitevő azt jelenti, hogy annak a valószínűsége, hogy egy farkas aktívan vadászik $\\text{energiapont}^{-|\\text{kitevő}|}$. Tehát, ha a kitevő 0, akkor nincs korlátozás. Fontos megjegyezni, hogy a kitevő azért nempozitív, mert különben a kódban működéséből kifolyólag a valószínűség 100% lenne, mint a 0 esetében. Szabad vadászat esetén a túlvadászat a jellemző, ez volt a kitevő bevezetésének motivációja."
+    "A vadászatot korlátozó kitevő azt jelenti, hogy annak a valószínűsége, hogy egy farkas aktívan vadászik $\\text{energiapont}^{-|\\text{kitevő}|}$. Tehát, ha a kitevő 0, akkor nincs korlátozás. Fontos megjegyezni, hogy a kitevő azért nempozitív, mert különben a kód működéséből kifolyólag a valószínűség 100% lenne, mint a 0 esetében. Szabad vadászat esetén jellemző a túlvadászat, ez volt a kitevő bevezetésének motivációja."
    ]
   },
   {
@@ -84,7 +84,7 @@
     "<li>Minden fű mindig ki van nőve.</li>\n",
     "<li>A bárányoknak végtelen energiájuk van (nem változik).</li>\n",
     "<li>A farkasok megadott valószínűséggel esznek meg egy bárányt abból a cellából amelyen ők is vannak.</li>\n",
-    "<li>Az egyedek megadott valószínűséggel hoznak világra utódot, amely utód az egyik szomszédos cellába kerül.</li>\n",
+    "<li>Az egyedek megadott valószínűséggel hoznak világra egy utódot, amely utód az egyik szomszédos cellába kerül.</li>\n",
     "</ul>"
    ]
   },
@@ -105,7 +105,7 @@
     "<li>Szintén az eredeti modellből implementálva.</li>\n",
     "<li>A fentiek érvényesek az alábbiak mellett.</li>\n",
     "<li>A bárányok energiája ugyanúgy változik, mint a farkasoké.</li>\n",
-    "<li>A lelegelt fű ágensek megadott lépésenként nőnek ki újra.</li>\n",
+    "<li>A lelegelt fű ágensek megadott számú lépés után nőnek ki újra.</li>\n",
     "</ul>"
    ]
   },
