--- a/wolfsheep.ipynb
+++ b/wolfsheep.ipynb
@@ -267,8 +267,7 @@
     "ax1, ax2 = df.plot(subplots=[tuple(df.columns[:-1])], sharex=True)\n",
     "ax1.legend(bbox_to_anchor=(1, 1))\n",
     "ax2.legend(bbox_to_anchor=(1, 1))\n",
-    "df.to_csv(\"data.csv\", sep=\";\", decimal=\",\")\n",
-    "df.to_numpy().shape"
+    "df.to_csv(\"data.csv\", sep=\";\", decimal=\",\")"
    ]
   },
   {
