--- a/rabbitgrassweed.ipynb
+++ b/rabbitgrassweed.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "source": [
     "A modell elemzés céljából legérdekesebb tulajdonsága a stabilitás, vagyis, hogy a modellben szereplő fajok kihalnak-e vagy sem.<br>\n",
-    "A fent leírt alapértelmezett paraméterek esetén, amelyek a fű valószínűsége és az újak kivételével az eredeti modellből származnak, jellemző a stabilitás. A rókákat érintő paraméterek úgy lettek beállítva, hogy 50 kezdeti róka esetén is stabil legyen a modell."
+    "A fent leírt alapértelmezett paraméterek esetén, amelyek a fű kinövési valószínűsége és az újak kivételével az eredeti modellből származnak, jellemző a stabilitás. A rókákat érintő paraméterek úgy lettek beállítva, hogy 50 kezdeti róka esetén is stabil legyen a modell."
    ]
   },
   {
