--- a/rabbitgrassweed.ipynb
+++ b/rabbitgrassweed.ipynb
@@ -130,7 +130,10 @@
    "metadata": {},
    "source": [
     "A modell elemzés céljából legérdekesebb tulajdonsága a stabilitás, vagyis, hogy a modellben szereplő fajok kihalnak-e vagy sem.<br>\n",
-    "A fent leírt alapértelmezett paraméterek esetén, amelyek a fű kinövési valószínűsége és az újak kivételével az eredeti modellből származnak, jellemző a stabilitás. A rókákat érintő paraméterek úgy lettek beállítva, hogy 50 kezdeti róka esetén is stabil legyen a modell."
+    "A fent leírt alapértelmezett paraméterek esetén, amelyek a fű kinövési valószínűsége és az újak kivételével az eredeti modellből származnak, jellemző a stabilitás. A rókákat érintő paraméterek úgy lettek beállítva, hogy 50 kezdeti róka esetén is stabil legyen a modell. Ez utóbbi eset futattható lejjebb és 10000 lépés után is stabil.\n",
+    "\n",
+    "Érdekes jelenség, hogy teljesen különböző paraméterek mellett is az indítás után az állatok száma lezuhan, de előfordulhat, hogy a zuhanást egy hirtelen növekedés előzi meg.\n",
+    "\n"
    ]
   },
   {
@@ -174,7 +177,7 @@
    "id": "ea331839",
    "metadata": {},
    "source": [
-    "<img src=\"rabbitgrassweed/pics/viz_showcase.png\" width=700>"
+    "<img src=\"rabbitgrassweed/pics/viz_showcase_hun.png\" width=700>"
    ]
   },
   {
@@ -186,7 +189,7 @@
     "\n",
     "A weboldal alapértelmezett nyelve az angol, de a jobb felső sarokban lévő zászlóra kattintva a grafikonok jelmagyarázatának kivételével átállítható magyarra és akár vissza is. A bal felső sarokban a model neve látható, mellette a Leírás gombra kattintva a README.md egy rövidített, csak az oldal aktuális nyelvén lévő változata olvasható. A zászlótól balra látható az Indítás, a Léptetés és a Visszaállítás gombok, amelyek nevükhöz hűen működnek, de az Indítás gomb a Megállítás gombbá változik, ha fut a szimuláció.\n",
     "\n",
-    "A bal oldalon a modell paraméterei állíthatók be, középen a modellt vizualizáló négyzetrács látható, amely felett a rendes, Indítás gombbal való indított szimuláció sebessége allítható, amely alapértelmezett értéke 3 lépés/másodperc, azonban ez az ágensek számától függően változhat (például túlszaporodás esetén lassabb). A rács alatt két grafikon látható (az alsó nem fért a képre), amely közül a felső az egyedek számát ábrázolja fajonként, illetve nemenként a lépésszám függvényében. Az alsó grafikon a kinőtt fűágensek százalékos arányát ábrázolja szintén a lépésszám függvényében. A lejjebb lévő \"Vizualizáció nélküli futtattás\" szakaszban ugyanezen grafikonok láthatóak.\n",
+    "A bal oldalon a modell paraméterei állíthatók be, középen a modellt vizualizáló négyzetrács látható, amely felett a rendes, Indítás gombbal való indított szimuláció sebessége allítható, amely alapértelmezett értéke 3 lépés/másodperc, azonban ez az ágensek számától függően változhat (például túlszaporodás esetén lassabb). A rács alatt két grafikon látható, amely közül a felső az egyedek számát ábrázolja fajonként, illetve nemenként a lépésszám függvényében. Az alsó grafikon a kinőtt fűágensek százalékos arányát ábrázolja szintén a lépésszám függvényében. A lejjebb lévő \"Vizualizáció nélküli futtattás\" szakaszban ugyanezen grafikonok láthatóak.\n",
     "\n",
     "A nőstény nyulak fehérek, a hímek barnák, a nőstény rókák narancssárgák, a hímek pirosak. Ennek a választásnak a következménye az, hogy az alapértelmezett modelltípusban minden nyúl nőstény és minden róka hím."
    ]
@@ -204,7 +207,7 @@
    "id": "60e9a092",
    "metadata": {},
    "source": [
-    "Az alábbi cella futtattásával a modell alapértelmezett paramétereivel 100 lépés szimulálható és az adatokat egy pontosvesszővel elválasztott csv fájlba írható, amelyben tizedesvessző van, nem tizedespont. Igény szerint ez a df.to_csv sep és decimal paraméterrével megváltoztatható, illetve az első paraméter a fájlnév. A lépésszám a range(100)-ban a 100 átállításával változtatható meg. Én az 5000 vagy 10000 lépésszámot ajánlom, de ilyenkor a futtattás sok időbe telik."
+    "Az alábbi cella futtattásával a modell alapértelmezett paramétereivel 10000 lépés szimulálható és az adatokat egy pontosvesszővel elválasztott csv fájlba írható, amelyben tizedesvessző van, nem tizedespont. Igény szerint ez a df.to_csv sep és decimal paraméterrével megváltoztatható, illetve az első paraméter a fájlnév. A lépésszám a range(10000)-ben a 100000 átállításával változtatható meg. 10000 lépés futattása egy kicsit több, mint 1 percbe telik."
    ]
   },
   {
