Documentation progress, changed Hungarian word for weeds

--- a/rabbitgrassweed.ipynb
+++ b/rabbitgrassweed.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Herman Dávid Tamás\n",
-    "# Nyulak, fű és gazok populációmodell <img src=\"rabbitgrassweed/pics/frabbit.png\"> <img src=\"rabbitgrassweed/pics/rabbit.png\">"
+    "# Nyulak, fű és gyomok populációmodell <img src=\"rabbitgrassweed/pics/frabbit.png\"> <img src=\"rabbitgrassweed/pics/rabbit.png\">"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "id": "0d2fac66",
    "metadata": {},
    "source": [
-    "A \"Nyulak, fű és gazok\" egy NetLogoban készült ágens alapú modell saját programozású mesa implementációja, illetve továbbfejlesztése.\n",
+    "A \"Nyulak, fű és gyomok\" egy NetLogoban készült ágens alapú modell saját programozású mesa implementációja, illetve továbbfejlesztése.\n",
     "Ez a modell egy növényevőfaj és annak kétféle táplálékának populációinak együttélését modellezi.\n",
     "Az alapértelmezett modelltípus az eredeti modellt hivatott a lehető leghűbben implementálni, míg a \"Bővített modell\" típusban az egyedenek neme is van.\n",
     "\n",
@@ -51,14 +51,14 @@
    "metadata": {},
    "source": [
     "Mindkét modelltípusban van egy növényevőfaj, amelyet nyulakkal reprezentálunk.\n",
-    "Ezek a nyulak egy olyan területen élnek, ahol fű vagy gazok nőhetnek valószínűségi alapon, amelyeknek van egy adott tápértéke.\n",
+    "Ezek a nyulak egy olyan területen élnek, ahol fű vagy gyomok nőhetnek valószínűségi alapon, amelyeknek van egy adott tápértéke.\n",
     "Továbbá minden egyednek van valamennyi energiája (továbbiakban energiapont, röviden EP), amely minden lépésben (a modell állapotváltozása) eggyel csökken, de evés által a megevett táplálék típusától függő paraméternyivel megnő. Ha elfogy az energiájuk, akkor meghalnak. Ezek mellett képesek is szaporodni, amennyiben egy megadott szint feletti energiapontjuk van, azonban ekkor az energiájuk megfeleződik. A modell egy lépésében az állat ágensek egy szomszédos cellába lépnek át, ahol a szomszédos cellák a Moore-féle szomszédokat jelentik az ágens aktuális cellájának kivételével, tehát az állat ágensek nem maradhatnak egy helyben.\n",
     "\n",
     "Az energiapontról annyit érdemes tudni, hogy a program eggyel kevesebb energiaponttal dolgozik, mint ami egy állaton látható a vizualizációs alkalmazásban, ha rájuk tesszük a kurzort. Ez azt hivatott korrigálni, hogy a szaporodási küszöb és a kezdeti maximális EP paraméterek szigorú egyenlőtlenséget használnak. Ezen paraméterek csúszkái a kijelzett értékek szerint állíthatók. Tehát a felhasználónak az alkalmazás legalább 1 EP-t jelez. Az állatokra rátéve a kurzort látható egy \"Layer: 1\" érték is, ami réteget jelent és nem elhagyható. A fű ágenseknél ez a réteg 0 és ennek köszönhető, hogy csak az állatokon jelenik meg ez a jelzés.\n",
     "\n",
-    "Az eredeti modellben a fű és a gazok mint \"patchek\" voltak a cellákba helyezve, míg ebben az implementációban ágensként.\n",
-    "A füvet és a gazokat egy közös fű ágens kezeli, amennyiből annyi van, ahány cella. A fű ágenseknek két állapota van, kinőtt és lelegelt.\n",
-    "Fontos tulajdonság, hogy a cellákban nagyobb valószínűséggel nő ki fű, mint gazok. Ennek az az oka, hogy először az dől el, hogy gazok nőhetnek-e ki és utána, hogy fű, azonban ez felülírja gazokat, amennyiben bekövetkezik. Tehát, ha fű kinőhet a megadott valószínűség szerint, akkor fű nő ki függetlenül attól, hogy gazok kinőhetnek-e vagy sem. Ez a viselkedés az eredeti modellből származik.\n",
+    "Az eredeti modellben a fű és a gyomok mint \"patchek\" voltak a cellákba helyezve, míg ebben az implementációban ágensként.\n",
+    "A füvet és a gyomokat egy közös fű ágens kezeli, amennyiből annyi van, ahány cella. A fű ágenseknek két állapota van, kinőtt és lelegelt.\n",
+    "Fontos tulajdonság, hogy a cellákban nagyobb valószínűséggel nő ki fű, mint gyomok. Ennek az az oka, hogy először az dől el, hogy gyomok nőhetnek-e ki és utána, hogy fű, azonban ez felülírja gyomokat, amennyiben bekövetkezik. Tehát, ha fű kinőhet a megadott valószínűség szerint, akkor fű nő ki függetlenül attól, hogy gyomok kinőhetnek-e vagy sem. Ez a viselkedés az eredeti modellből származik.\n",
     "\n",
     "A modell továbbfejlesztése céljából lehetőség van egy ragadozófaj hozzáadásához, amelyet rókákkal reprezentálunk. A rókák alapvetően ugyanúgy viselkednek, mint a nyulak, de természetesen a rókák a nyulakat eszik meg. Emellett képesek aktívan is vadászni, vagyis csak olyan szomszédos cellába lépni, amelyben van nyúl.\n",
     "\n",
@@ -69,13 +69,13 @@
     "<br><i>30 x 30</i></li>\n",
     "<li>Tórusz: Ha egy állat ágens a rács szélén van, akkor átléphetnek-e a szemben lévő szélre vagy sem.\n",
     "<br><i>Igaz</i></li>\n",
-    "<li>Modelltípus, amely lehet az eredeti modell, a \"Nyulak, fű és gazok modell\", vagy a \"Bővített modell\", amiben az állatoknak van neme.\n",
-    "<br><i>Nyulak, fű és gazok modell</i></li>\n",
+    "<li>Modelltípus, amely lehet az eredeti modell, a \"Nyulak, fű és gyomok modell\", vagy a \"Bővített modell\", amiben az állatoknak van neme.\n",
+    "<br><i>Nyulak, fű és gyomok modell</i></li>\n",
     "<li>A nyulak kezdeti száma.\n",
     "<br><i>150</i></li>\n",
     "<li>A rókák kezdeti száma.\n",
     "<br><i>0</i></li>\n",
-    "<li>A nyulak fűből és gazokból nyert energiapont mennyisége.\n",
+    "<li>A nyulak fűből és gyomokból nyert energiapont mennyisége.\n",
     "<br><i>5 és 0</i></li>\n",
     "<li>A rókák nyulakból nyert energiapont mennyisége.\n",
     "<br><i>5</i></li>\n",
@@ -83,7 +83,7 @@
     "<br><i>10 és 10</i></li>\n",
     "<li>A nyulak és rókák szaporodási küszöbe. Legalább ennyi energiapontra van szüksége egy egyednek a szaporodáshoz.\n",
     "<br><i>15 és 15</i></li>\n",
-    "<li>A fű és a gazok kinövési valószínűsége százalékban. Az eredeti modellben ezrelékben, de a csúszkák ilyen sűrű beosztású intervallumon pontatlanok.\n",
+    "<li>A fű és a gyomok kinövési valószínűsége százalékban. Az eredeti modellben ezrelékben, de a csúszkák ilyen sűrű beosztású intervallumon pontatlanok.\n",
     "<br><i>6%, eredetileg 15 ezrelék, vagyis 1,5%</i></li>\n",
     "<li>A nyulak csordába igyekezzenek-e szerveződni.\n",
     "<br><i>Hamis</i></li>\n",
@@ -136,7 +136,7 @@
     "\n",
     "Érdekes jelenség, hogy teljesen különböző paraméterek mellett is az indítás után az állatok száma lezuhan, de előfordulhat, hogy a zuhanást egy kis növekedés előzi meg, azonban ez a seedtől függ.\n",
     "\n",
-    "A modell akkor is stabil marad, ha a modelltípust átállítjuk, azonban rókákkal már ez nem teljesül, mert a rókák kihalnak. Mindkét modelltípusban megmarad a stabilitás, ha a gazok szaporodási valószínűségét 12% állítjuk, de a gazok tápértéke továbbra is 0.\n",
+    "A modell akkor is stabil marad, ha a modelltípust átállítjuk, azonban rókákkal már ez nem teljesül, mert a rókák kihalnak. Mindkét modelltípusban megmarad a stabilitás, ha a gyomok szaporodási valószínűségét 12% állítjuk, de a gyomok tápértéke továbbra is 0.\n",
     "\n",
     "Ha a kezdeti rókák száma 50 és az aktív vadászat ki van kapcsolva, akkor a rókák csak úgy élhetnek túl, ha valamilyen paramétert átállítunk. Több teszt futtatása után a nyulak tápértékének növelése bizonyult kifizetődőnek. A minimális tápérték amellett stabil a modell az 12.\n",
     "\n",
@@ -239,7 +239,7 @@
     "\n",
     "\n",
     "model = RabbitGrassWeedModel(width=30, height=30, torus=True,\n",
-    "                             model_type=\"Nyulak, fű és gazok modell\",\n",
+    "                             model_type=\"Nyulak, fű és gyomok modell\",\n",
     "                             n_rabbit=150, n_fox=50,\n",
     "                             rabbit_ep_gain_grass=5, rabbit_ep_gain_weed=0, fox_ep_gain=5,\n",
     "                             rabbit_max_init_ep=10, fox_max_init_ep=10,\n",
